--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,8 +1,8 @@
 ---
 galaxy_info:
   author: Dmitrii Kashin
-  description: install kubernetes cluster (minimal)
-  role_name: k8s_minimal
+  description: install helm application / chart
+  role_name: helm_app
   license: MIT
 
   min_ansible_version: 2.7
